# hse-calendar-parser

./: .gitignore  AGENT.md  LICENSE  README.md  TASK.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: FAQ.md  HOWTOUSE.md
hse_parser/: cli.py  config.py  controller.py  date_engine.py  exporter.py  models.py  reader.py  utils.py
hse_parser/parser/: cell_parser.py  date_parser.py  line_filters.py  rules.py  text_cleaner.py
hse_schedule_parser/: __main__.py  autodetect.py  presets.py  tui.py  wizard.py
plans/: architecture-plan.md  tui-architecture-plan.md
tests/: test_autodetect.py  test_date_engine.py  test_presets.py  test_tui.py  test_wizard.py
