[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hse-parser"
version = "0.1.0"
description = "HSE (Higher School of Economics) schedule parser → iCalendar (.ics)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HSE Calendar Parser Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "openpyxl>=3.1",
    "icalendar>=5.0",
    "click>=8.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/tisomeke/hse-calendar-parser"
Repository = "https://github.com/tisomeke/hse-calendar-parser"
BugTracker = "https://github.com/tisomeke/hse-calendar-parser/issues"

[project.scripts]
hse-parser = "hse_parser.cli:main"
hse-schedule-parser = "hse_schedule_parser.__main__:main"

[tool.setuptools.packages.find]
include = ["hse_parser*", "hse_schedule_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]